[project]
name = "cuddlycat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Taylor Monacelli", email = "taylormonacelli@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.8",
    "pydantic>=2.10.6",
    "uvicorn>=0.34.0",
]

[project.scripts]
cuddlycat = "cuddlycat:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
